# rubric-scorer

./: LICENSE  README.md  pyproject.toml
examples/: criteria.json  responses.json  run_example.py
rubric_scorer/: __init__.py  criteria.py
tests/: test_scorer.py
